--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,11 +6,11 @@
     <th>Text</th>
   </tr>
  
-  <% @tasks.each do |task| %>
+  <% @tasks.each do |t| %>
     <tr>
-      <td><%= task.title %></td>
-      <td><%= task.text %></td>
-      <td><%= link_to 'Show', task_path(task) %></td>
+      <td><%= t.title %></td>
+      <td><%= t.text %></td>
+      <td><%= t.inspect %></td>
     </tr>
   <% end %>
 </table>
