--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,7 @@
     <th>Text</th>
   </tr>
  
-  <% @tasks.each do |article| %>
+  <%= @tasks.each do |article| %>
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
