--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,9 +6,8 @@
     <th>Text</th>
   </tr>
  
-  <%= @tasks.each do |article| %>
     <tr>
-      <td>777</td>
+      <td><pre><%= @task.inspect %></pre></td>
     </tr>
-  <% end %>
+
 </table>
