--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,9 +5,9 @@
     <th>Title</th>
     <th>Text</th>
   </tr>
- 
+  <% @task.each do |ts| %>
     <tr>
-      <td><pre><%= @task.inspect %></pre></td>
+      <td>111</td>
     </tr>
-
+  <% end %>
 </table>
