--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,8 @@
   </tr>
   <% @task.each do |ts| %>
     <tr>
-      <td>111</td>
+      <td><%= ts.title %></td>
+      <td><%= ts.text %></td>
     </tr>
   <% end %>
 </table>
