--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,6 +9,7 @@
     <tr>
       <td><%= ts.title %></td>
       <td><%= ts.text %></td>
+      <td><%= link_to 'Show', task_path(ts) %></td>
     </tr>
   <% end %>
 </table>
